--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -2,7 +2,7 @@
    Set z-index to keep the nav over the rasterized images */
 
 header nav {
-  z-index: 1;
+  z-index: 10;
 }
 
 #nav {
