--- a/css/components/_toc.scss
+++ b/css/components/_toc.scss
@@ -39,7 +39,7 @@ div.toc {
     float: right;
     margin-right: -280px;
     border-left: 1px solid #6b6b6b;
-    width: auto;
+    width: 250px;
     position: -webkit-sticky;
     position: sticky;
     top: 60px;
