--- a/css/main.scss
+++ b/css/main.scss
@@ -20,7 +20,7 @@ $c-gray: #888;
 // FONTS
 $font-main: "Poppins", Arial, Helvetica, sans-serif;
 $font-main-var: "Poppins" var alt, Arial, Helvetica, sans-serif;
-$font-heading: "Recoleta";
+$font-heading: "Recoleta", Arial, Helvetica, sans-serif;
 $font-code: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
 $font-bold: 600;
 $font-size: 16.5px;
